# qqq-qld-leverage

./: LICENSE  README.md
backtests/qqq70_qld30/: README.md
backtests/qqq70_qld30/results/: summary_metrics.csv
qqq-qld-optimal-allocation/: README.md  pyproject.toml  requirements.txt
qqq-qld-optimal-allocation/backtests/qqq70_qld30/: run_backtest.py
qqq-qld-optimal-allocation/backtests/qqq70_qld30/results/: calendar_year_returns.csv  largest_drawdowns.csv  monthly_returns.csv
qqq-qld-optimal-allocation/config/: default.yaml
qqq-qld-optimal-allocation/docs/: methodology.md
qqq-qld-optimal-allocation/results/: weight_grid.csv
qqq-qld-optimal-allocation/src/qqq_qld/: __init__.py  backtest.py  metrics.py  optimize.py
qqq-qld-optimal-allocation/src/qqq_qld_optimal_allocation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
qqq-qld-optimal-allocation/tests/: test_metrics.py
qqq-qld-optimal-allocation/work/: tt_qqq.csv
results/: bootstrap_weights.csv  summary.md  walk_forward.csv
scripts/: run_analysis.py
src/qqq_qld/: cli.py  data.py  report.py
src/qqq_qld_optimal_allocation.egg-info/: requires.txt
tests/: test_backtest.py  test_optimize.py
work/: prices.csv  tt_qld.csv
