[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qqq-qld-optimal-allocation"
version = "1.0.0"
description = "Reproducible research on optimal QQQ + QLD allocations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "All Rights Reserved"}
authors = [{name = "idkmaths"}]
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
  "PyYAML>=6.0",
  "requests>=2.31",
  "scipy>=1.11",
  "tabulate>=0.9",
  "yfinance>=0.2.54",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6"]

[project.scripts]
qqq-qld = "qqq_qld.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
